welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:5: error: type mismatch;
 found   : Boolean(false)
 required: Int
  return false } 
         ^